fix overflow

--- a/reactProps2/src/index.css
+++ b/reactProps2/src/index.css
@@ -191,3 +191,7 @@ top:5px;
     column-count:5;
   }
 }
+
+.hidden-text {
+  text-overflow: ellipsis;
+}
